[package]
name = "rpg-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
r2d2 = "0.8.10"
diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "uuid"] }
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
serde = { version = "1.0", features = ["derive"] }
